--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,7 @@ font:
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
-  LinkLabel: Link
+  LinkLabel: http://www.baidu.com
 
 
 # Social Links Icons
@@ -225,15 +225,15 @@ social:
 social_icons:
   enable: true
   # Icon Mappings.
-  # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  GitHub: github
+  KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
+  GitHub: LinkLabel
   Twitter: twitter
   Weibo: weibo
 
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
-#avatar:
+avatar: /assets/images/avatar.gif
 
 
 # Table Of Contents in the Sidebar
