--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,7 @@ font:
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
-  LinkLabel: http://www.baidu.com
+  GitHub: http://www.baidu.com
 
 
 # Social Links Icons
@@ -226,7 +226,7 @@ social_icons:
   enable: true
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  GitHub: http://www.baidu.com
+  GitHub: github
   Twitter: twitter
   Weibo: weibo
 
