--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ subtitle: 一个程序猿
 description:
 author: 姜仲钰
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
-language: zh-hk
+language: zh-cn
 date_format: '%Y-%m-%d'
 
 # URL
